force-app/main/default/src/objects/Journey_MVN__c/Journey_MVN__c.object-meta.xml
<CustomObject>
    <description>Journeys in Health Cloud map to Journeys created in Marketing Cloud. This mapping is maintained manually by an administrator.</description>
    <label>Journey</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>