force-app/main/default/src/objects/Journey_MVN__c/fields/Active_Participants_MVN__c.field-meta.xml
<CustomField>
    <fullName>Active_Participants_MVN__c</fullName>
    <description>Number of active Journey participants.</description>
    <inlineHelpText>Number of active Journey participants.</inlineHelpText>
    <label>Active Participants</label>
    <summaryFilterItems>
        <field>Journey_Contact_MVN__c.Exit_Date_MVN__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Journey_Contact_MVN__c.Journey_MVN__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>