force-app/main/default/src/objects/Journey_MVN__c/fields/Description_MVN__c.field-meta.xml
<CustomField>
    <fullName>Description_MVN__c</fullName>
    <description>Description of the Journey.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>