force-app/main/default/src/objects/Journey_MVN__c/fields/Journey_Code_MVN__c.field-meta.xml
<CustomField>
    <fullName>Journey_Code_MVN__c</fullName>
    <description>Code that is used for Journey Entry in Marketing Cloud.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Code that is used for Journey Entry in Marketing Cloud.</inlineHelpText>
    <label>Journey Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>