force-app/main/default/src/objects/Journey_MVN__c/fields/Total_Participants_MVN__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants_MVN__c</fullName>
    <description>Total number of contacts that have gone through the Journey.</description>
    <inlineHelpText>Total number of contacts that have gone through the Journey.</inlineHelpText>
    <label>Total Participants</label>
    <summaryForeignKey>Journey_Contact_MVN__c.Journey_MVN__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>