force-app/main/default/src/objects/Journey_MVN__c/fields/Type_MVN__c.field-meta.xml
<CustomField>
    <fullName>Type_MVN__c</fullName>
    <description>Indicates if the journey represents an individual email (for resends) or a full journey (multiple emails).</description>
    <inlineHelpText>Indicates if the journey represents an individual email (for resends) or a full journey (multiple emails).</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Journey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>