force-app/main/default/src/objects/Journey_MVN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_MVN__c</columns>
    <columns>Journey_Code_MVN__c</columns>
    <columns>Description_MVN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>